--- a/roles/calibreweb/tasks/main.yml
+++ b/roles/calibreweb/tasks/main.yml
@@ -5,9 +5,9 @@
 #      docker exec -u abc:abc calibreweb calibre-server --enable-auth --enable-local-write --userdb /calibre/users.sqlite /books
 #   3) Configure Readarr by specifying
 ---
-- name: Create the necessary folder for {{ container_name }}
+- name: Create the necessary folder for Calibre-Web
   file:
-    path: "{{ docker_dir }}/{{ calibreweb_container_name }}/config"
+    path: "{{ docker_dir }}/calibreweb/config"
     state: directory
     owner: "{{ guid }}"
     group: "{{ guid }}"
@@ -15,7 +15,7 @@
 
 - name: Create the Calibre folder
   file:
-    path: "{{ docker_dir }}/{{ calibreweb_container_name }}/calibre"
+    path: "{{ docker_dir }}/calibreweb/calibre"
     state: directory
     owner: "{{ guid }}"
     group: "{{ guid }}"
@@ -24,7 +24,7 @@
 - name: Create the custom-services folder
   become: true
   file:
-    path: "{{ docker_dir }}/{{ calibreweb_container_name }}/custom-services.d"
+    path: "{{ docker_dir }}/calibreweb/custom-services.d"
     state: directory
     owner: root
     group: root
@@ -32,8 +32,8 @@
 
 - name: Copy the users database
   copy:
-    src: roles/{{ calibreweb_container_name }}/files/users.sqlite
-    dest: "{{ docker_dir }}/{{ calibreweb_container_name }}/calibre/users.sqlite"
+    src: roles/calibreweb/files/users.sqlite
+    dest: "{{ docker_dir }}/calibreweb/calibre/users.sqlite"
     owner: "{{ guid }}"
     group: "{{ guid }}"
     mode: "0755"
@@ -41,21 +41,21 @@
 - name: Copy the launcher for Calibre server
   become: true
   copy:
-    src: roles/{{ calibreweb_container_name }}/templates/start-calibre.sh.j2
-    dest: "{{ docker_dir }}/{{ container_name }}/custom-services.d/start-calibre.sh"
+    src: roles/calibreweb/templates/start-calibre.sh.j2
+    dest: "{{ docker_dir }}/calibreweb/custom-services.d/start-calibre.sh"
     owner: root
     group: root
     mode: "0755"
 
 - name: Add a crontab line to start Calibre webserver
   ansible.builtin.lineinfile:
-    path: "{{ docker_dir }}/{{ container_name }}/config/crontabs/abc"
+    path: "{{ docker_dir }}/calibreweb/config/crontabs/abc"
     line: "@reboot calibre-server /books"
     create: true
 
 - name: Make sure that Calibre-Web container is created and running
   docker_container:
-    name: "{{ container_name }}"
+    name: "calibreweb"
     image: lscr.io/linuxserver/calibre-web:latest
     pull: true
     networks:
@@ -68,11 +68,19 @@
       DOCKER_MODS: linuxserver/mods:universal-calibre|linuxserver/mods:universal-package-install
       INSTALL_PACKAGES: wget
     volumes:
-      - "{{ docker_dir }}/{{ container_name }}/calibre:/calibre"
-      - "{{ docker_dir }}/{{ container_name }}/calibre/metadata.db:/books/metadata.db"
-      - "{{ docker_dir }}/{{ container_name }}/config:/config"
-      - "{{ docker_dir }}/{{ container_name }}/custom-services.d:/custom-services.d:ro"
+      - "{{ docker_dir }}/calibreweb/calibre:/calibre"
+      - "{{ docker_dir }}/calibreweb/calibre/metadata.db:/books/metadata.db"
+      - "{{ docker_dir }}/calibreweb/config:/config"
+      - "{{ docker_dir }}/calibreweb/custom-services.d:/custom-services.d:ro"
       - "{{ mergerfs_root }}/Media/Books:/books"
     restart_policy: unless-stopped
+
+- name: Install the SWAG config files
+  template:
+    src: calibreweb.subdomain.conf.j2
+    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/calibreweb.subdomain.conf"
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: "0644"
 
 # TODO: create ad-hoc Docker exec commands for user creation and server start
