--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Create the necessary Firefox folder
   file:
-    path: "{{ docker_dir }}/{{ container_name }}"
+    path: "{{ docker_dir }}/{{ firefox_container_name }}"
     state: directory
     owner: "{{ guid }}"
     group: "{{ guid }}"
@@ -9,7 +9,7 @@
 
 - name: Make sure that Firefox container is created and running
   docker_container:
-    name: "{{ container_name }}"
+    name: "{{ firefox_container_name }}"
     image: lscr.io/linuxserver/mullvad-browser:latest
     pull: true
     capabilities:
@@ -31,5 +31,13 @@
       - /dev/dri/renderD128:/dev/dri/renderD128
     volumes:
       - "{{ mergerfs_root }}/Downloads:/config/Downloads"
-      - "{{ docker_dir }}/{{ container_name }}:/config/.mozilla/firefox"
+      - "{{ docker_dir }}/{{ firefox_container_name }}:/config/.mozilla/firefox"
     restart_policy: unless-stopped
+
+- name: Install the SWAG config files
+  template:
+    src: "{{ firefox_container_name }}.subdomain.conf.j2"
+    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/{{ firefox_container_name }}.subdomain.conf"
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: "0644"
