--- a/roles/homer/tasks/docker.yml
+++ b/roles/homer/tasks/docker.yml
@@ -13,12 +13,20 @@
       - "{{ docker_dir }}/homer:/www/assets"
     restart_policy: unless-stopped
 
-- name: Make sure cors-container is created and running
-  docker_container:
-    name: cors-container
-    image: imjacobclark/cors-container
-    pull: true
-    networks:
-      - name: swag_internal_network
-    state: started
-    restart_policy: unless-stopped
+- name: Install the SWAG config files
+  template:
+    src: homer.subdomain.conf.j2
+    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/homer.subdomain.conf"
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: "0644"
+
+# - name: Make sure cors-container is created and running
+#   docker_container:
+#     name: cors-container
+#     image: imjacobclark/cors-container
+#     pull: true
+#     networks:
+#       - name: swag_internal_network
+#     state: started
+#     restart_policy: unless-stopped
