--- a/roles/lidarr/tasks/main.yml
+++ b/roles/lidarr/tasks/main.yml
@@ -24,7 +24,7 @@
 
 - name: Make sure that Lidarr container is created and running
   docker_container:
-    name: "{{ container_name }}"
+    name: "{{ lidarr_container_name }}"
     image: ghcr.io/linuxserver/lidarr
     pull: true
     networks:
@@ -34,11 +34,16 @@
       PUID: "{{ guid }}"
       PGID: "{{ guid }}"
       TZ: "{{ timezone }}"
-      DOCKER_MODS: linuxserver/mods:universal-package-install|linuxserver/mods:universal-docker
-      INSTALL_PACKAGES: shntool|cuetools|flac|vim
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - "{{ docker_dir }}/{{ container_name }}:/config"
+      - "{{ docker_dir }}/{{ lidarr_container_name }}:/config"
       - "{{ mergerfs_root }}:/storage"
-      - /var/run/docker.sock:/var/run/docker.sock
     restart_policy: unless-stopped
+
+- name: Install the SWAG config files
+  template:
+    src: "{{ lidarr_container_name }}.subdomain.conf.j2"
+    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/{{ lidarr_container_name }}.subdomain.conf"
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: "0644"
