--- a/roles/prowlarr/tasks/main.yml
+++ b/roles/prowlarr/tasks/main.yml
@@ -14,7 +14,7 @@
 
 - name: Make sure that Prowlarr container is created and running
   docker_container:
-    name: "{{ container_name }}"
+    name: "{{ prowlarr_container_name }}"
     image: lscr.io/linuxserver/prowlarr:develop
     pull: true
     networks:
@@ -26,5 +26,13 @@
       TZ: "{{ timezone }}"
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - "{{ docker_dir }}/{{ container_name }}:/config"
+      - "{{ docker_dir }}/{{ prowlarr_container_name }}:/config"
     restart_policy: unless-stopped
+
+- name: Install the SWAG config files
+  template:
+    src: "templates/{{ prowlarr_container_name }}.subdomain.conf.j2"
+    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/{{ prowlarr_container_name }}.subdomain.conf"
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: "0644"
