--- a/roles/readarr/tasks/main.yml
+++ b/roles/readarr/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Create the necessary Readarr folder
   file:
-    path: "{{ docker_dir }}/{{ container_name }}"
+    path: "{{ docker_dir }}/{{ readarr_container_name }}"
     state: directory
     owner: "{{ username }}"
     group: "{{ username }}"
@@ -21,6 +21,14 @@
       TZ: "{{ timezone }}"
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - "{{ docker_dir }}/{{ container_name }}:/config"
+      - "{{ docker_dir }}/{{ readarr_container_name }}:/config"
       - "{{ mergerfs_root }}:/storage"
     restart_policy: unless-stopped
+
+- name: Install the SWAG config files
+  template:
+    src: "{{ readarr_container_name }}.subdomain.conf.j2"
+    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/{{ readarr_container_name }}.subdomain.conf"
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: "0644"
