--- a/roles/sonarr/tasks/main.yml
+++ b/roles/sonarr/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Make sure that Sonarr container is created and running
   docker_container:
-    name: "{{ container_name }}"
+    name: "{{ sonarr_container_name }}"
     image: ghcr.io/linuxserver/sonarr
     pull: true
     networks:
@@ -13,6 +13,14 @@
       TZ: "{{ timezone }}"
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - "{{ docker_dir }}/{{ container_name }}:/config"
+      - "{{ docker_dir }}/{{ sonarr_container_name }}:/config"
       - "{{ mergerfs_root }}:/storage"
     restart_policy: unless-stopped
+
+- name: Install the SWAG config files
+  template:
+    src: "{{ sonarr_container_name }}.subdomain.conf.j2"
+    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/{{ sonarr_container_name }}.subdomain.conf"
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: "0644"
