--- a/roles/speedtest_tracker/tasks/main.yml
+++ b/roles/speedtest_tracker/tasks/main.yml
@@ -38,12 +38,25 @@
       TZ: "{{ timezone }}"
       APP_KEY: "{{ speedtest_tracker_app_key }}"
       APP_URL: "{{ speedtest_tracker_dashboard_url }}"
+      APP_TIMEZONE: "{{ timezone }}"
       DB_CONNECTION: mysql
       DB_HOST: "{{ speedtest_tracker_container_name }}-db"
       DB_DATABASE: speedtest
       DB_USERNAME: "{{ mysql_user }}"
       DB_PASSWORD: "{{ mysql_password }}"
+      DISPLAY_TIMEZONE: "{{ timezone }}"
+      SPEEDTEST_PING_URL: "1.1.1.1"
+      SPEEDTEST_SCHEDULE: "0,10,20,30,40,50 * * * *"
+      PRUNE_RESULTS_OLDER_THAN: "30"
     networks:
       - name: swag_internal_network
     state: started
     restart_policy: unless-stopped
+
+- name: Install the SWAG config files
+  template:
+    src: "speedtest.subdomain.conf.j2"
+    dest: "{{ docker_dir }}/swag/internal/nginx/proxy-confs/speedtest.subdomain.conf"
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: "0644"
